--- a/_2_2_GLM_ExpertInput.ipynb
+++ b/_2_2_GLM_ExpertInput.ipynb
@@ -2,14 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1a452992",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.ensemble import GradientBoostingClassifier\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
@@ -45,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "cd915ca2",
    "metadata": {
     "pycharm": {
@@ -60,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "ad0de45b",
    "metadata": {
     "pycharm": {
@@ -100,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "17934272",
    "metadata": {
     "pycharm": {
