added gpu functionality

--- a/_1_1_CommonDataPrep.ipynb
+++ b/_1_1_CommonDataPrep.ipynb
@@ -2,49 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
+     "is_executing": false,
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sklearn.ensemble import GradientBoostingClassifier\n",
-    "from sklearn.ensemble import GradientBoostingRegressor\n",
-    "import statsmodels.api as sm\n",
-    "import statsmodels.formula.api as smf\n",
-    "from sklearn.preprocessing import PolynomialFeatures\n",
-    "import numpy as np\n",
-    "from matplotlib import pyplot as plt\n",
+    "\n",
     "import warnings\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import math\n",
-    "import statsmodels.api as sm\n",
-    "import statsmodels.formula.api as smf\n",
-    "import itertools\n",
-    "import plotly.express as px \n",
-    "from scipy import stats\n",
-    "from copy import deepcopy\n",
-    "from sklearn.model_selection import GroupShuffleSplit\n",
-    "from sklearn.datasets import fetch_openml\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "from Functions import dateprep as prep\n",
+    "from Functions import dataprep as prep\n",
     "from sklearn.datasets import fetch_openml\n",
-    "import pandas as pd\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -52,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -68,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -82,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -104,7 +76,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.1"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "metadata": {
+     "collapsed": false
+    },
+    "source": []
+   }
   }
  },
  "nbformat": 4,
