--- a/_1_1_CommonDataPrep.ipynb
+++ b/_1_1_CommonDataPrep.ipynb
@@ -2,13 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false,
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": null,
    "outputs": [],
    "source": [
     "\n",
@@ -20,27 +14,37 @@
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [
     "freq0 = fetch_openml(data_id=41214, as_frame=True).data\n",
     "freq1 = prep.feature_engineering_frequency_schelldorfer(freq0)\n",
     "freq2 = prep.data_cleaning_frequency_schelldorfer(freq1)\n",
+    "\n",
+    "freq2['ClaimNb'] = freq2['ClaimNb'].apply(lambda x: 4 if x > 4 else x)\n",
+    "\n",
     "train, test = prep.data_split_frequency_schelldorfer(freq2)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -76,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.9.12"
   },
   "pycharm": {
    "stem_cell": {
