--- a/_2_1_GLM.ipynb
+++ b/_2_1_GLM.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "1a452992",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -52,7 +56,11 @@
    "cell_type": "code",
    "execution_count": 31,
    "id": "cd915ca2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "train = pd.read_pickle('./data/common_dataprep/train.pickle')\n",
@@ -63,7 +71,11 @@
    "cell_type": "code",
    "execution_count": 29,
    "id": "ad0de45b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "formula0 = 'ClaimNb ~ 1'\n",
@@ -83,7 +95,11 @@
    "cell_type": "code",
    "execution_count": 30,
    "id": "17934272",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -106,7 +122,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1e051720",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
