--- a/_1_2_GanDataPrep.ipynb
+++ b/_1_2_GanDataPrep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "5e495102",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "00cf754c",
    "metadata": {},
    "outputs": [],
@@ -39,14 +39,15 @@
     "cont_vars = ['VehPower', \n",
     "                     'VehAge',\n",
     "                     'DrivAge',\n",
-    "                     'DensityGLM',\n",
+    "                     'Density',\n",
     "                     'BonusMalus',\n",
     "            'Exposure']\n",
     "cats_vars = [\"ClaimNb\",\n",
     "            'VehBrand',\n",
     "            'VehGas',\n",
     "            'Region',\n",
-    "            \"AreaGLM\"]\n",
+    "             'Area'\n",
+    "            ]\n",
     "\n",
     "policy1[cont_vars] = policy1[cont_vars].astype(float)\n",
     "policy1[cats_vars] = policy1[cats_vars].astype('category')\n",
@@ -56,17 +57,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "080450a9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "policy3 = pd.DataFrame(preprocessing.StandardScaler().fit_transform(policy2), columns = policy2.columns)"
+    "ss = preprocessing.StandardScaler()\n",
+    "policy3 = pd.DataFrame(ss.fit_transform(policy2), columns = policy2.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
+   "id": "6e615a35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert len(policy3) == len(policy2), 'Lengths shouldnt differ'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "cfc7c146",
    "metadata": {},
    "outputs": [],
@@ -84,7 +96,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
+   "id": "11dac492",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert policy3['Exposure'].isna().sum() == 0, 'There should not be any empty exposures'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "211e8be6",
    "metadata": {},
    "outputs": [],
@@ -95,17 +117,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "da274473",
+   "execution_count": 8,
+   "id": "859c0887",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['./data/gan_dataprep/scaler.pickle']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "train"
+    "import joblib\n",
+    "joblib.dump(ss, './data/gan_dataprep/scaler.pickle')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "95f4fc5f",
    "metadata": {},
    "outputs": [],
@@ -181,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.9.12"
   },
   "pycharm": {
    "stem_cell": {
