--- a/_2_3_Gan.ipynb
+++ b/_2_3_Gan.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# %%\n",
@@ -38,25 +37,18 @@
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "1\n",
-      "Devid: 0\n",
-      "GeForce RTX 2080\n",
-      "cuda\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "print(torch.cuda.is_available())\n",
     "print(torch.cuda.device_count())\n",
@@ -66,12 +58,17 @@
     "print(torch.cuda.get_device_name(devid))\n",
     "dev = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
     "print(dev)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": null,
    "outputs": [],
    "source": [
     "train = pd.read_pickle(\"./data/gan_dataprep/train_gan.pickle\")\n",
@@ -112,12 +109,17 @@
     "# make predictions on test data with models trained on train data\n",
     "real_pois_preds = poisson_mod.predict(X_test)\n",
     "# %%"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": null,
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -153,12 +155,17 @@
     "disc_l2_regularization = 0\n",
     "disc_learning_rate = 0.01\n",
     "penalty = 10  ## deals with gradiant penalty"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": null,
    "outputs": [],
    "source": [
     "auto_data = PolicyDataset(pol_dat, var_locs)\n",
@@ -168,24 +175,18 @@
     "                         shuffle=True,\n",
     "                         num_workers=7\n",
     "                         )"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "487648"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "class PolicyDataset(Dataset):\n",
     "    def __init__(self, data, cont_locs, small_test = None):\n",
@@ -201,213 +202,178 @@
     "        else:\n",
     "            return [torch.from_numpy(self.policy.iloc[index].values).float(),\n",
     "                  0]"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>VehPower</th>\n",
-       "      <th>VehAge</th>\n",
-       "      <th>DrivAge</th>\n",
-       "      <th>DensityGLM</th>\n",
-       "      <th>BonusMalus</th>\n",
-       "      <th>Exposure</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-0.71</td>\n",
-       "      <td>-1.29</td>\n",
-       "      <td>0.67</td>\n",
-       "      <td>0.60</td>\n",
-       "      <td>-0.62</td>\n",
-       "      <td>-1.18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-0.22</td>\n",
-       "      <td>-0.92</td>\n",
-       "      <td>0.46</td>\n",
-       "      <td>-1.06</td>\n",
-       "      <td>-0.62</td>\n",
-       "      <td>0.61</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.26</td>\n",
-       "      <td>-1.29</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>-0.88</td>\n",
-       "      <td>-0.62</td>\n",
-       "      <td>-1.21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.26</td>\n",
-       "      <td>-1.29</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>-0.88</td>\n",
-       "      <td>-0.62</td>\n",
-       "      <td>0.85</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>0.26</td>\n",
-       "      <td>-1.29</td>\n",
-       "      <td>-0.89</td>\n",
-       "      <td>-0.57</td>\n",
-       "      <td>0.53</td>\n",
-       "      <td>0.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>541826</th>\n",
-       "      <td>-0.22</td>\n",
-       "      <td>-0.55</td>\n",
-       "      <td>-0.39</td>\n",
-       "      <td>1.03</td>\n",
-       "      <td>0.53</td>\n",
-       "      <td>-1.44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>541827</th>\n",
-       "      <td>-1.20</td>\n",
-       "      <td>-1.29</td>\n",
-       "      <td>0.60</td>\n",
-       "      <td>1.14</td>\n",
-       "      <td>-0.62</td>\n",
-       "      <td>-1.45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>541828</th>\n",
-       "      <td>-1.20</td>\n",
-       "      <td>-1.29</td>\n",
-       "      <td>-0.32</td>\n",
-       "      <td>1.72</td>\n",
-       "      <td>2.25</td>\n",
-       "      <td>-1.45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>541829</th>\n",
-       "      <td>-0.22</td>\n",
-       "      <td>-0.92</td>\n",
-       "      <td>-0.04</td>\n",
-       "      <td>0.65</td>\n",
-       "      <td>-0.62</td>\n",
-       "      <td>-1.45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>541830</th>\n",
-       "      <td>-1.20</td>\n",
-       "      <td>-1.29</td>\n",
-       "      <td>1.03</td>\n",
-       "      <td>-0.76</td>\n",
-       "      <td>-0.62</td>\n",
-       "      <td>-1.45</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>487648 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        VehPower  VehAge  DrivAge  DensityGLM  BonusMalus  Exposure\n",
-       "0          -0.71   -1.29     0.67        0.60       -0.62     -1.18\n",
-       "2          -0.22   -0.92     0.46       -1.06       -0.62      0.61\n",
-       "3           0.26   -1.29     0.03       -0.88       -0.62     -1.21\n",
-       "4           0.26   -1.29     0.03       -0.88       -0.62      0.85\n",
-       "6           0.26   -1.29    -0.89       -0.57        0.53      0.50\n",
-       "...          ...     ...      ...         ...         ...       ...\n",
-       "541826     -0.22   -0.55    -0.39        1.03        0.53     -1.44\n",
-       "541827     -1.20   -1.29     0.60        1.14       -0.62     -1.45\n",
-       "541828     -1.20   -1.29    -0.32        1.72        2.25     -1.45\n",
-       "541829     -0.22   -0.92    -0.04        0.65       -0.62     -1.45\n",
-       "541830     -1.20   -1.29     1.03       -0.76       -0.62     -1.45\n",
-       "\n",
-       "[487648 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "data.iloc[:,cont_locs]"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ok\n",
-      "ok\n",
-      "ok\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "for c1, c2 in auto_loader: \n",
     "    print('ok')"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'DataLoader' object has no attribute 'data'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[8], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mauto_loader\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdata\u001B[49m\n",
-      "\u001B[1;31mAttributeError\u001B[0m: 'DataLoader' object has no attribute 'data'"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "auto_loader.data"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#loop = tqdm(total=epochs, position=0, leave=False)\n",
+    "for epoch in range(epochs):\n",
+    "    for d_epoch in range(disc_epochs):\n",
+    "        print(f'Epoch: {epoch}, D-epoch {d_epoch}')\n",
+    "        for c1, c2 in auto_loader:  # c1 is continous variables and c2 is the categorical variables\n",
+    "            print('c1c2')\n",
+    "            batch = torch.cat([c2, c1], 1)\n",
+    "            batch = batch.to(dev)\n",
+    "            optim_disc.zero_grad()\n",
+    "\n",
+    "            # train discriminator with real data\n",
+    "            real_features = Variable(batch).to(dev)\n",
+    "            real_pred = discriminator(real_features)\n",
+    "            # the disc outputs high numbers if it thinks the data is real, we take the negative of this\n",
+    "            # Because we are minimizing loss\n",
+    "            real_loss = -real_pred.mean(0).view(1)\n",
+    "            real_loss.backward()\n",
+    "\n",
+    "            # then train the discriminator only with fake data\n",
+    "            noise = Variable(torch.FloatTensor(len(batch), z_size).normal_()).to(dev)\n",
+    "            fake_features = generator(noise, training=True)\n",
+    "            fake_features = fake_features.detach().to(dev)  # do not propagate to the generator\n",
+    "            fake_pred = discriminator(fake_features)\n",
+    "            fake_loss = fake_pred.mean(0).view(1)\n",
+    "            fake_loss.backward()\n",
+    "\n",
+    "            # this is the magic from WGAN-GP\n",
+    "            gradient_penalty = calculate_gradient_penalty(discriminator.to(dev), penalty, real_features.to(dev), fake_features.to(dev))\n",
+    "            gradient_penalty.backward()\n",
+    "\n",
+    "            # finally update the discriminator weights\n",
+    "            optim_disc.step()\n",
+    "\n",
+    "            disc_loss = real_loss + fake_loss + gradient_penalty\n",
+    "            disc_losses = disc_loss.item()\n",
+    "            # Delete to prevent memory leakage\n",
+    "            del gradient_penalty\n",
+    "            del fake_loss\n",
+    "            del real_loss\n",
+    "            del disc_loss\n",
+    "            del real_features\n",
+    "            del real_pred\n",
+    "            del noise\n",
+    "            del fake_features\n",
+    "            del fake_pred\n",
+    "\n",
+    "    for g_epoch in range(gen_epochs):\n",
+    "        print(f'Epoch: {epoch}, D-epoch {g_epoch}')\n",
+    "        optim_gen.zero_grad()\n",
+    "\n",
+    "        noise = Variable(torch.FloatTensor(len(batch), z_size).normal_()).to(dev)\n",
+    "        gen_features = generator(noise).to(dev)\n",
+    "        gen_pred = discriminator(gen_features)\n",
+    "\n",
+    "        gen_loss = - gen_pred.mean(0).view(1)\n",
+    "        gen_loss.backward()\n",
+    "\n",
+    "        optim_gen.step()\n",
+    "\n",
+    "        gen_loss = gen_loss\n",
+    "        gen_losses = gen_loss.item()\n",
+    "        del gen_loss\n",
+    "        del noise\n",
+    "        del gen_features\n",
+    "        del gen_pred\n",
+    "\n",
+    "    #loop.set_description('epoch:{}, disc_loss:{:.4f}, gen_loss:{:.4f}'.format(epoch, disc_losses, gen_losses))\n",
+    "    #loop.update(1)\n",
+    "    # analyze poisson regression parameters every 20 epochs\n",
+    "    if (epoch % 20 == 0):\n",
+    "        with torch.no_grad():\n",
+    "            generated_data = generator(Variable(torch.FloatTensor(pol_dat.shape[0], z_size).normal_()).to(dev), training=False)\n",
+    "        df1 = pd.DataFrame(generated_data.data.to('cpu').numpy())\n",
+    "        df1.columns = list(pol_dat)\n",
+    "        df2 = back_from_dummies(df1)\n",
+    "        df2['ClaimNb'] = df2['ClaimNb'].astype('float').astype('int')\n",
+    "        y_gen, X_gen = dmatrices(formula,\n",
+    "                                 data=df2,\n",
+    "                                 return_type='dataframe')\n",
+    "\n",
+    "        # df2.to_csv(output_data_save_path)\n",
+    "        # Fit poisson Model\n",
+    "        try:\n",
+    "            poisson_mod_gen = sm.GLM(y_gen, X_gen, family=sm.families.Poisson(), offset=np.log(df2['Exposure'])).fit()\n",
+    "        except ValueError:\n",
+    "            continue\n",
+    "        # Calculate Errors\n",
+    "        errors_pois = poisson_mod_gen.predict(X_test) - real_pois_preds\n",
+    "\n",
+    "        pois_metric.append(round(np.mean(errors_pois), 4))\n",
+    "\n",
+    "        if (epoch > 3):\n",
+    "            plt.subplot(311)\n",
+    "            plt.plot(pois_metric, label='train')\n",
+    "            plt.ylabel('poission Dif')\n",
+    "            plt.show()\n",
+    "            plt.clf()\n",
+    "\n",
+    "        print('Mean Absolute Difference Pois:', round(np.mean(errors_pois), 2))\n",
+    "\n",
+    "        del errors_pois\n",
+    "        del poisson_mod_gen\n",
+    "        del generated_data\n",
+    "        del df1\n",
+    "        del df2\n",
+    "        del gen_features\n",
+    "\n",
+    "        torch.save(generator.state_dict(), f='./saved_parameters/gen_test')\n",
+    "        # print(pois_df)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
