--- a/_2_3_Gan.ipynb
+++ b/_2_3_Gan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# %%\n",
@@ -42,6 +42,10 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-05-07T21:41:13.604841900Z",
+     "start_time": "2023-05-07T21:41:02.817626700Z"
     }
    }
   },
