--- a/_2_3_Gan2.ipynb
+++ b/_2_3_Gan2.ipynb
@@ -56,7 +56,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Device: cpu\n"
+      "Device: cuda\n"
      ]
     }
    ],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def glm_metrics(train, val):\n",
@@ -113,46 +118,64 @@
     "\n",
     "def xpxixpy(X, y):\n",
     "    return np.dot(np.linalg.inv(np.dot(X.T, X)), np.dot(X.T, y))\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32.02011267896118"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "glm_metrics(train, val)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "output_size = [1, 1, 1, 1, 1, 1, 5, 11, 2, 22, 6]"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "epoch:17733, disc_loss:9109.8837890625, gen_loss:2900969.25:  89%|████████▊ | 17734/20000 [11:46:06<1:31:47,  2.43s/it]         \n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# # %%\n",
     "# formula = 'ClaimNb ~ VehBrand + VehGas + Region + AreaGLM + VehPower + VehAge + DrivAge + DensityGLM + BonusMalus'\n",
@@ -198,7 +221,7 @@
     "# parameters\n",
     "z_size = 100  # how big is the random vector fed into the generator\n",
     "# we should only need the 55?\n",
-    "batch_size = 1000\n",
+    "batch_size = 7000\n",
     "temperature = None  # comes into play with the categorical activation see multioutput.py\n",
     "\n",
     "# Generator tuning\n",
@@ -351,10 +374,10 @@
     "    loop.update(1)\n",
     "\n",
     "    # analyze poisson regression parameters every 20 epochs\n",
-    "    if (epoch % 20 == 0):\n",
+    "    if False & (epoch % 20 == 0) & (epoch > 10):\n",
     "        with torch.no_grad():\n",
     "            generated_data = generator(Variable(torch.FloatTensor(pol_dat.shape[0], z_size).normal_()).to(dev), training=False)\n",
-    "        df1 = pd.DataFrame(generated_data.data.to('cpu').numpy())\n",
+    "        df1 = pd.DataFrame(generated_data.data.to('cpu').numpy().round(2))\n",
     "        df1.columns = list(pol_dat)\n",
     "        \n",
     "        try:\n",
@@ -377,13 +400,79 @@
     "\n",
     "        #torch.save(generator.state_dict(), f='./saved_parameters/gen_test')\n",
     "        # print(pois_df)\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = pd.DataFrame(generated_data.data.to('cpu').numpy().round(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = pd.DataFrame(ss.inverse_transform(df1), columns = train.columns)\n",
+    "df2 = back_from_dummies(df2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
     }
-   }
+   ],
+   "source": [
+    "df2['ClaimNb'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2901202.5"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gen_losses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Transform back\n",
+    "train = pd.DataFrame(ss.inverse_transform(df1), columns = train.columns)\n",
+    "train = back_from_dummies(train)\n",
+    "train['ClaimNb'] = train['ClaimNb'].astype(float).astype(int)\n",
+    "train['Density'] = train['Density'].clip(lower=1)\n",
+    "glm_train = prep.data_cleaning_frequency_schelldorfer(train)\n"
+   ]
   }
  ],
  "metadata": {
@@ -402,7 +491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
