introduced new version of wc-mgan-gp

--- a/_1_2_GanDataPrep.ipynb
+++ b/_1_2_GanDataPrep.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "5e495102",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -40,7 +44,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "00cf754c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "policy1 = pd.read_pickle(\"./data/common_dataprep/train.pickle\")\n",
@@ -66,30 +74,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "080450a9",
-   "metadata": {},
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "ss = preprocessing.StandardScaler()\n",
+    "ss = preprocessing.MinMaxScaler()\n",
     "policy3 = pd.DataFrame(ss.fit_transform(policy2), columns = policy2.columns)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "6e615a35",
-   "metadata": {},
+   "execution_count": null,
    "outputs": [],
    "source": [
     "assert len(policy3) == len(policy2), 'Lengths shouldnt differ'"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "cfc7c146",
-   "metadata": {},
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Take a sampel of the data for quickly training\n",
@@ -101,56 +115,87 @@
     "\n",
     "val = pol_dat.iloc[val_inds]\n",
     "train = pol_dat.iloc[train_inds]\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "11dac492",
-   "metadata": {},
+   "execution_count": null,
    "outputs": [],
    "source": [
     "assert policy3['Exposure'].isna().sum() == 0, 'There should not be any empty exposures'"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "211e8be6",
-   "metadata": {},
+   "execution_count": null,
    "outputs": [],
    "source": [
     "train.to_pickle(\"./data/gan_dataprep/train_gan.pickle\")\n",
     "val.to_pickle(\"./data/gan_dataprep/val_gan.pickle\")\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "859c0887",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['./data/gan_dataprep/scaler.pickle']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "import joblib\n",
     "joblib.dump(ss, './data/gan_dataprep/scaler.pickle')\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66c38030",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "id": "95f4fc5f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -203,7 +248,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "18a59d6c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
@@ -224,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.9.12"
   },
   "pycharm": {
    "stem_cell": {
