--- a/_1_2_GanDataPrep.ipynb
+++ b/_1_2_GanDataPrep.ipynb
@@ -2,23 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "5e495102",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-05-09T16:13:37.840893200Z",
+     "start_time": "2023-05-09T16:13:35.309727Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# -*- coding: utf-8 -*-\n",
     "\"\"\"\n",
@@ -42,11 +37,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "00cf754c",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-05-09T16:13:38.348590300Z",
+     "start_time": "2023-05-09T16:13:37.840893200Z"
     }
    },
    "outputs": [],
@@ -74,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "ss = preprocessing.MinMaxScaler()\n",
@@ -84,12 +83,16 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-05-09T16:13:38.752872800Z",
+     "start_time": "2023-05-09T16:13:38.348590300Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "assert len(policy3) == len(policy2), 'Lengths shouldnt differ'"
@@ -98,12 +101,16 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-05-09T16:13:38.816229100Z",
+     "start_time": "2023-05-09T16:13:38.752872800Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# Take a sampel of the data for quickly training\n",
@@ -120,12 +127,16 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-05-09T16:13:39.021772Z",
+     "start_time": "2023-05-09T16:13:38.816229100Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "assert policy3['Exposure'].isna().sum() == 0, 'There should not be any empty exposures'"
@@ -134,12 +145,16 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-05-09T16:13:39.101202200Z",
+     "start_time": "2023-05-09T16:13:39.028794Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "train.to_pickle(\"./data/gan_dataprep/train_gan.pickle\")\n",
@@ -149,13 +164,26 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-05-09T16:13:39.453534800Z",
+     "start_time": "2023-05-09T16:13:39.101202200Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['./data/gan_dataprep/scaler.pickle']"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import joblib\n",
     "joblib.dump(ss, './data/gan_dataprep/scaler.pickle')\n"
@@ -164,28 +192,12 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-05-09T16:13:39.532857400Z",
+     "start_time": "2023-05-09T16:13:39.453534800Z"
     }
    }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "66c38030",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
