did some testing

--- a/_2_3_Gan.ipynb
+++ b/_2_3_Gan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "# %%\n",
@@ -44,8 +44,34 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-05-07T21:41:13.604841900Z",
-     "start_time": "2023-05-07T21:41:02.817626700Z"
+     "end_time": "2023-05-09T21:00:56.132886900Z",
+     "start_time": "2023-05-09T21:00:50.299916200Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "       VehPower    VehAge   DrivAge   Density  BonusMalus  Exposure  \\\ncount 487648.00 487648.00 487648.00 487648.00   487648.00 487648.00   \nmean       0.22      0.35      0.38      0.07        0.05      0.53   \nstd        0.19      0.27      0.20      0.15        0.09      0.36   \nmin        0.00      0.00      0.00      0.00        0.00      0.00   \n25%        0.09      0.10      0.22      0.00        0.00      0.18   \n50%        0.18      0.30      0.36      0.01        0.00      0.49   \n75%        0.27      0.55      0.51      0.06        0.08      0.99   \nmax        1.00      1.00      1.00      1.00        1.00      1.00   \n\n       ClaimNb_0.0  ClaimNb_1.0  ClaimNb_2.0  ClaimNb_3.0  ...  Region_R83  \\\ncount    487648.00    487648.00    487648.00    487648.00  ...   487648.00   \nmean          0.95         0.05         0.00         0.00  ...        0.01   \nstd           0.22         0.21         0.05         0.01  ...        0.09   \nmin           0.00         0.00         0.00         0.00  ...        0.00   \n25%           1.00         0.00         0.00         0.00  ...        0.00   \n50%           1.00         0.00         0.00         0.00  ...        0.00   \n75%           1.00         0.00         0.00         0.00  ...        0.00   \nmax           1.00         1.00         1.00         1.00  ...        1.00   \n\n       Region_R91  Region_R93  Region_R94    Area_A    Area_B    Area_C  \\\ncount   487648.00   487648.00   487648.00 487648.00 487648.00 487648.00   \nmean         0.05        0.12        0.01      0.15      0.11      0.28   \nstd          0.22        0.32        0.08      0.36      0.32      0.45   \nmin          0.00        0.00        0.00      0.00      0.00      0.00   \n25%          0.00        0.00        0.00      0.00      0.00      0.00   \n50%          0.00        0.00        0.00      0.00      0.00      0.00   \n75%          0.00        0.00        0.00      0.00      0.00      1.00   \nmax          1.00        1.00        1.00      1.00      1.00      1.00   \n\n         Area_D    Area_E    Area_F  \ncount 487648.00 487648.00 487648.00  \nmean       0.22      0.20      0.03  \nstd        0.42      0.40      0.16  \nmin        0.00      0.00      0.00  \n25%        0.00      0.00      0.00  \n50%        0.00      0.00      0.00  \n75%        0.00      0.00      0.00  \nmax        1.00      1.00      1.00  \n\n[8 rows x 52 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>VehPower</th>\n      <th>VehAge</th>\n      <th>DrivAge</th>\n      <th>Density</th>\n      <th>BonusMalus</th>\n      <th>Exposure</th>\n      <th>ClaimNb_0.0</th>\n      <th>ClaimNb_1.0</th>\n      <th>ClaimNb_2.0</th>\n      <th>ClaimNb_3.0</th>\n      <th>...</th>\n      <th>Region_R83</th>\n      <th>Region_R91</th>\n      <th>Region_R93</th>\n      <th>Region_R94</th>\n      <th>Area_A</th>\n      <th>Area_B</th>\n      <th>Area_C</th>\n      <th>Area_D</th>\n      <th>Area_E</th>\n      <th>Area_F</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>487648.00</td>\n      <td>487648.00</td>\n      <td>487648.00</td>\n      <td>487648.00</td>\n      <td>487648.00</td>\n      <td>487648.00</td>\n      <td>487648.00</td>\n      <td>487648.00</td>\n      <td>487648.00</td>\n      <td>487648.00</td>\n      <td>...</td>\n      <td>487648.00</td>\n      <td>487648.00</td>\n      <td>487648.00</td>\n      <td>487648.00</td>\n      <td>487648.00</td>\n      <td>487648.00</td>\n      <td>487648.00</td>\n      <td>487648.00</td>\n      <td>487648.00</td>\n      <td>487648.00</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>0.22</td>\n      <td>0.35</td>\n      <td>0.38</td>\n      <td>0.07</td>\n      <td>0.05</td>\n      <td>0.53</td>\n      <td>0.95</td>\n      <td>0.05</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>...</td>\n      <td>0.01</td>\n      <td>0.05</td>\n      <td>0.12</td>\n      <td>0.01</td>\n      <td>0.15</td>\n      <td>0.11</td>\n      <td>0.28</td>\n      <td>0.22</td>\n      <td>0.20</td>\n      <td>0.03</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>0.19</td>\n      <td>0.27</td>\n      <td>0.20</td>\n      <td>0.15</td>\n      <td>0.09</td>\n      <td>0.36</td>\n      <td>0.22</td>\n      <td>0.21</td>\n      <td>0.05</td>\n      <td>0.01</td>\n      <td>...</td>\n      <td>0.09</td>\n      <td>0.22</td>\n      <td>0.32</td>\n      <td>0.08</td>\n      <td>0.36</td>\n      <td>0.32</td>\n      <td>0.45</td>\n      <td>0.42</td>\n      <td>0.40</td>\n      <td>0.16</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>...</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>0.09</td>\n      <td>0.10</td>\n      <td>0.22</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.18</td>\n      <td>1.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>...</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>0.18</td>\n      <td>0.30</td>\n      <td>0.36</td>\n      <td>0.01</td>\n      <td>0.00</td>\n      <td>0.49</td>\n      <td>1.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>...</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>0.27</td>\n      <td>0.55</td>\n      <td>0.51</td>\n      <td>0.06</td>\n      <td>0.08</td>\n      <td>0.99</td>\n      <td>1.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>...</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>1.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>0.00</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>1.00</td>\n      <td>1.00</td>\n      <td>1.00</td>\n      <td>1.00</td>\n      <td>1.00</td>\n      <td>1.00</td>\n      <td>1.00</td>\n      <td>1.00</td>\n      <td>1.00</td>\n      <td>1.00</td>\n      <td>...</td>\n      <td>1.00</td>\n      <td>1.00</td>\n      <td>1.00</td>\n      <td>1.00</td>\n      <td>1.00</td>\n      <td>1.00</td>\n      <td>1.00</td>\n      <td>1.00</td>\n      <td>1.00</td>\n      <td>1.00</td>\n    </tr>\n  </tbody>\n</table>\n<p>8 rows × 52 columns</p>\n</div>"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1 = pd.read_pickle('data/gan_dataprep/train_gan.pickle')\n",
+    "df1.describe()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-09T21:01:18.407117700Z",
+     "start_time": "2023-05-09T21:01:17.414970600Z"
     }
    }
   },
