--- a/_3_1_GLM_on_GAN.ipynb
+++ b/_3_1_GLM_on_GAN.ipynb
@@ -25,12 +25,15 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "df1 = pd.read_pickle('data/gan_generated/sample_no_ei.pickle')\n",
@@ -40,10 +43,103 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
-    },
-    "ExecuteTime": {
-     "end_time": "2023-05-09T22:05:07.814084Z",
-     "start_time": "2023-05-09T22:05:07.725470Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df1.columns = dftemp.columns"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df1.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from Functions.MC_WGAN_GP.gan_scripts.undo_dummy import back_from_dummies\n",
+    "\n",
+    "back_from_dummies()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from Functions.original.utils.initialization import load_or_initialize\n",
+    "from Functions.original.utils.commandline import parse_int_list\n",
+    "from Functions.original.methods.general.generator import Generator\n",
+    "\n",
+    "\n",
+    "generator = Generator(\n",
+    "    128,\n",
+    "    [\n",
+    "    1, 1, 1, 1, 1, 1,\n",
+    "    5, 11, 2, 22, 6\n",
+    "  ],\n",
+    "    hidden_sizes=parse_int_list(\"256,128\"),\n",
+    "    bn_decay=0.9\n",
+    ")\n",
+    "\n",
+    "load_or_initialize(generator, options.input_generator)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "generator = Generator(\n",
+    "    128,\n",
+    "    [\n",
+    "    1, 1, 1, 1, 1, 1,\n",
+    "    5, 11, 2, 22, 6\n",
+    "  ],\n",
+    "    hidden_sizes=parse_int_list(\"256,128\"),\n",
+    "    bn_decay=0.9\n",
+    ")\n",
+    "\n",
+    "load_or_initialize(generator, options.input_generator)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   },
