--- a/_1_3_Implement_Expert_Input.ipynb
+++ b/_1_3_Implement_Expert_Input.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "207afc02",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Penalize generative model if regression chooses expert input over linear input\n",
@@ -19,7 +23,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "ec773f71",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.ensemble import GradientBoostingClassifier\n",
@@ -58,7 +66,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "e1d0177c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "train = pd.read_pickle('./data/common_dataprep/train.pickle')\n",
@@ -69,7 +81,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "b0130269",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Expert input from Isabella\n",
@@ -104,7 +120,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "3c772a03",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -314,7 +334,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "3b89e96c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -343,7 +367,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "7e570345",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Expert Input from GDV\n",
@@ -395,7 +423,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "4c839672",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -780,7 +812,11 @@
    "cell_type": "code",
    "execution_count": 44,
    "id": "6fa534f0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "train.to_pickle('./data/common_dataprep/train_with_ei.pickle')\n",
@@ -791,7 +827,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "778c8e10",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
